[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaacnav"
version = "2.0.0"
description = "Image-to-3D asset pipeline for accessibility object generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "trimesh>=3.21.0",
    "open3d==0.18.0",
    "opencv-python>=4.9.0",
    "transformers>=4.30.0",
    "supervision>=0.22.0",
    "torchmetrics>=1.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
